# filecoin-signing-tools

./: .eslintrc.js  .gitignore  .gitmodules  .prettierignore  .prettierrc  .sonarcloud.properties  CNAME  Cargo.toml  LICENSE-MIT  Main.html  Makefile  NOTES.md  README-fuzzing.md  README.md  fcservice.postman_collection.json  filecoin-service.toml  filecoin-service_template.toml  index.html  package-fcwebsigner.json  package-lock.json  package-signer-wasm.json  package.json
.circleci/: config.yml  start_devnet.sh  test_c.sh  test_cpp.sh  test_go.sh  test_java.sh  test_kotlin.sh
.githooks/: pre-push
.github/: dependabot.yml
.github/scripts/: test_java.sh  test_kotlin.sh  test_objective-c.sh  test_swift.sh  wait_for_port.sh
.github/workflows/: main.yaml  publish.yaml
assets/css/: 0.styles.49161141.css
assets/js/: 10.147a31d6.js  10.c9aff0d9.js  11.957125d0.js  11.e9b2b34d.js  12.ffa6d869.js  13.a54acc53.js  13.c1be12df.js  14.60977442.js  15.13e4e523.js  3.70f55840.js  4.2e5b8aa6.js  6.4f865234.js  6.728d4cce.js  8.764c477a.js  8.8d3d361a.js  9.52eb5bd3.js  9.b75146d3.js  app.c28f2645.js  app.cc3c0713.js
docs/: .gitignore  LotusTests.http  Main.md  README.md  fcservice.postman_collection.json  index.md  jsonrpc_README.md  jsonrpc_api.md  rs_native_README.md  rs_native_api.md  wasm_README.md  wasm_api.md  wasm_ledger.md  workflow.md
docs/.vuepress/: config.js
docs/jsonrpc/: README.md  api.md  workflow.md
docs/native/: README.md  api.md
docs/wasm/: README.md  api.md  ledger.md
examples/: example_multisig.txt  generated_test_cases.json  manual_testvectors.json  private_keys_base64.txt
examples/ffi/: README.md
examples/js/: package.json
examples/jsonrpc/: .editorconfig  .eslintrc.json  example.js  package-lock.json  package.json
examples/service_jsonrpc/: .eslintrc.json  jest.config.integration.js  jest.config.js  jest.config.unit.js  package.json
examples/wasm/: .eslintrc.json  LICENSE  README.md  jest.config.js  package.json
examples/wasm-lola/: README.md  package.json
examples/wasm_browser/: .gitignore  README.md  bootstrap.js  index-multisig.js  index.html  index.js  package.json  webpack.config.js
examples/wasm_ledger/: babel.config.js  jest.config.js  jest.config.unit.js  package.json
examples/wasm_node/: .babelrc.save  .gitignore  README.md  multisig.js  package.json  (+3 more)
extras/: Cargo.toml  build.rs
extras/.cargo/: config.toml
extras/src/: cron.rs  init.rs  json.rs  lib.rs  message.rs  miner.rs  multisig.rs  paych.rs  signature.rs  signed_message.rs
fcservice/: Cargo.toml  README.md  fcservice.toml
fcservice/src/: commands.rs  config.rs  lib.rs  rpc_api.rs  rpc_client.rs  rpc_server.rs
fcservice/src/commands/: start.rs  version.rs
fcservice/src/service/: client.rs  error.rs  handlers.rs  methods.rs  mod.rs  utils.rs
fcservice/tests/: acceptance.rs
fcsigner/: Cargo.toml
fcsigner/src/: api.rs  bip44.rs  error.rs  lib.rs  utils.rs
fcwasmsigner/: Cargo.toml  webdriver.json
fcwebsigner/: Cargo.toml  README.md
hfuzz-signer/: Cargo.toml  FUZZING.md  signature.rs  signed-message.rs  unsigned-message.rs
jsonrpc/: api.html  index.html  workflow.html
kek/: kek.js  package.json
ledger/: Cargo.toml  README.md  package.json  transportWrapper.js
ledger/src/: apdu_transport_native.rs  apdu_transport_wasm.rs  app.rs  errors.rs  lib.rs  params.rs  utils.rs
native/: api.html  index.html
obsolete/: README.md  wasm_README.md
service/: Cargo.toml  README.md  fcservice-postman-collection.json  fcservice.toml  filecoin-service.toml
service/src/: application.rs  commands.rs  config.rs  lib.rs
service/src/service/: cache.rs  client.rs  error.rs  handlers.rs  methods.rs  mod.rs  test_helper.rs
service/tests/: acceptance.rs
signer/: Cargo.toml
signer-ffi/: Cargo.toml  Filecoin.java  cbindgen.toml
signer-ffi/flutter/filecoin/: pubspec.yaml
signer-ffi/flutter/filecoin/ios/: filecoin.podspec
signer-ffi/flutter/filecoin/ios/Classes/: SwiftFilecoinPlugin.swift
signer-ffi/flutter/filecoin/lib/: filecoin.dart
signer-ffi/java/: build.gradle
signer-ffi/java/src/main/java/ch/zondax/: FilecoinSigner.java
signer-ffi/src/: error.rs  extended_key.rs  lib.rs  macros.rs  tests.rs
signer-js/: package-lock.json  package.json
signer-npm/: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  package-signer-js.json  package-signer-wasm-browser.json  package-signer.json  package.json  pnpm-lock.yaml
signer-npm/js/: .editorconfig  .eslintrc.json  package-lock.json  package.json  tsconfig.json
signer-npm/js/src/: constants.js  constants.ts  errors.js  errors.ts  extendedkey.js  extendedkey.ts  index.js  index.ts  methods.js  methods.ts  types.ts  utils.js  utils.ts
signer-npm/js/src/utils/: index.js
signer-npm/rpc/: .eslintrc.json  index.js  package.json
signer-npm/rpc/src/: index.ts  types.ts
signer-npm/src/: ledger.rs  ledger_errors.rs  lib.rs  utils.rs
signer-npm/tests/: browser.rs
signer-wasm/: .gitignore  .npmignore  Cargo.toml  Makefile  README.md  package-signer-wasm-browser.json  package-signer-wasm.json  package-signer.json  package.json  transportWrapper.js
signer-wasm/js/: package.json
signer-wasm/js/src/: constants.js  errors.js  extendedkey.js  index.js  utils.js
signer-wasm/lib/: errors.js  index.js  session.js  signer.js
signer-wasm/lib/ledger/: common.js  helperV1.js  index.js
signer-wasm/src/: ledger.rs  ledger_errors.rs  lib.rs  utils.rs
signer-wasm/tests/: browser.rs  web.rs
signer/examples/: generate.rs  voucher.rs
signer/src/: api.rs  bip44.rs  code_cid.rs  error.rs  extended_key.rs  lib.rs  multisigV1.rs  multisig_deprecated.rs  signature.rs  utils.rs
signer/tests/: common.rs  lib_test.rs
signer/utils/: generate.rs
test_vectors/: NOTES.md  README.md  bls_signature.json  bls_wallet.json  deserialize_constructor_params.json  deserialize_params.json  get_cid.json  mnemonics.json  multisig.json  payment_channel.json  script.js  serialize_params.json  signed_message.json  txs.json  utils.json  verify_signature.json  voucher.json  wallet.json
wasm/: api.html  index.html
(+119 files in other folders)
