[package]
name = "fcservice"
authors = []
version = "0.1.0"
edition = "2018"

[dependencies]
gumdrop = "0.7"
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1", features = ["serde_derive"] }
serde_json = "1.0.45"
fcsigner = {path = "../fcsigner"}
tokio = { version = "0.2", features = ["full", "time"] }
reqwest = { version = "0.10.1", features = ["json", "gzip"] }
warp = "0.2.1"
jsonrpc-core = "14.0.5"
lru = "0.4.3"
lazy_static = "1.4.0"
libsecp256k1 = "0.3.4"
blake2b_simd = "0.5.10"

[dependencies.abscissa_core]
version = "0.5.1"
# optional: use `gimli` to capture backtraces
# see https://github.com/rust-lang/backtrace-rs/issues/189
# features = ["gimli-backtrace"]

[dev-dependencies]
abscissa_core = { version = "0.5.1", features = ["testing"] }
once_cell = "1.2"
