[package]
name = "fcsigner"
version = "0.1.0"
authors = ["Zondax <info@zondax.ch>"]
edition = "2018"

[dependencies]
num = { version = "0.2.1", features = ["serde"] }
anyhow = "1.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.45"
hex = "0.4.0"

vm = { git = "https://github.com/zondax/forest", branch="master" }
forest_message = { git = "https://github.com/zondax/forest", branch="master" }
forest_address = { git = "https://github.com/zondax/forest", branch="master" }
forest_encoding = { git = "https://github.com/zondax/forest", branch="master" }

num_bigint_chainsafe =  { package="num-bigint", git = "https://github.com/austinabell/num-bigint", rev = "f7084a9ed5a2b08d9bfb67790cb4ce9212193f31", features = ["serde_derive"] }

libsecp256k1 = "0.3.4"
blake2b_simd = "0.5.10"

# FIXME: confirm compatibility with WASM target
[dependencies.rand]
version = "0.7.3"
