[[bin]]
name = "signature"
path = "signature.rs"

[[bin]]
name = "signed-message"
path = "signed-message.rs"

[[bin]]
name = "unsigned-message"
path = "unsigned-message.rs"

[dependencies]
filecoin-signer = { features = ["with-arbitrary"], path = "../signer" }
forest_address = "0.3.1"
forest_crypto = { default-features = false, features = ["pairing"], version = "0.5.2" }
forest_message = { default-features = false, features = ["pairing"], version = "0.7" }
honggfuzz = "0.5"

[package]
authors = ["Zondax <info@zondax.ch>"]
edition = "2018"
name = "hfuzz-signer"
publish = false
version = "0.0.0"
