[[bin]]
name = "signed-message"
path = "signed-message.rs"

[[bin]]
name = "unsigned-message"
path = "unsigned-message.rs"

[dependencies]
filecoin-signer = { features = ["with-arbitrary"], path = "../signer" }
honggfuzz = "0.5"

[package]
authors = ["Zondax <info@zondax.ch>"]
edition = "2018"
name = "hfuzz-signer"
publish = false
version = "0.0.0"
