[package]
name = "ledger-filecoin"
description = "Library to integrate with the Ledger Filecoin app"
version = "0.10.0"
license = "Apache-2.0"
authors = ["Zondax GmbH <info@zondax.ch>"]
homepage = "https://github.com/ZondaX/ledger-filecoin-rs"
repository = "https://github.com/ZondaX/ledger-filecoin-rs"
readme = "README.md"
categories  = ["authentication", "cryptography"]
keywords = ["ledger", "nano", "apdu", "filecoin"]
edition     = "2018"
autobenches = false

[lib]
name = "ledger_filecoin"

[dependencies]
#ledger = "0.2.5"
ledger-generic = { path = "/home/lola/Workspace/Zondax/ledger-generic" }
async-trait = "0.1.30"
quick-error = "1.2.2"
byteorder = "1.3.1"
matches = "0.1.8"
lazy_static = "1.2.0"
libsecp256k1 = "0.3.5"
blake2b_simd = "0.5.10"

[dev-dependencies]
sha2 = "0.8.0"

[profile.release]
overflow-checks = true
