[package]
name = "filecoin-service"
authors = ["Zondax <info@zondax.ch>"]
version = "0.1.0"
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/Zondax/filecoin-signing-tools"
description =""

[dependencies]
gumdrop = "0.7"
thiserror = "1.0"
serde = { version = "1", features = ["serde_derive"] }
serde_json = "1.0"
filecoin-signer = { path = "../signer" }
forest_message = "0.3.0"
tokio = { version = "0.2", features = ["full", "time"] }
reqwest = { version = "0.10.6", features = ["json", "gzip"] }
warp = "0.2.1"
jsonrpc-core = "14.0.5"
lru = { optional = true, version = "0.5.3" }
hex = "0.4"
lazy_static = "1.4.0"
libsecp256k1 = "0.3.4"
blake2b_simd = "0.5.10"
base64 = "0.12.0"

[dependencies.abscissa_core]
version = "0.5.2"
# optional: use `gimli` to capture backtraces
# see https://github.com/rust-lang/backtrace-rs/issues/189
# features = ["gimli-backtrace"]

[dev-dependencies]
abscissa_core = { version = "0.5.1", features = ["testing"] }
once_cell = "1.2"
futures-await-test = "0.3"

[features]
cache-nonce = ["lru"]
default = []
