[package]
name = "filecoin-service"
authors = ["Zondax <info@zondax.ch>"]
version = "0.1.0"
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/Zondax/filecoin-signing-tools"
description =""

[dependencies]
thiserror = "1.0.20"
serde_json = "1.0.57"
filecoin-signer = { path = "../signer" }
forest_message = "0.3.0"
warp = "0.2.1"
jsonrpc-core = "14.0.5"
lazy_static = "1.4.0"
libsecp256k1 = "0.3.4"
blake2b_simd = "0.5.10"
base64 = "0.12.0"
hex = { git = "https://github.com/Zondax/rust-hex", rev="6e35fb48999278c8c6c75b099baa4ea2a9d1d12b" }

gumdrop = "0.7.0"
[dependencies.abscissa_core]
version = "0.5.2"

[dependencies.serde]
version = "1.0.115"
features = ["serde_derive"]

[dependencies.lru]
optional = true
version = "0.5.3"

[dependencies.tokio]
version = "0.2.22"
features = ["full", "time"]

[dependencies.reqwest]
version = "0.10.7"
features = ["json", "gzip"]

[dev-dependencies]
abscissa_core = { version = "0.5.1", features = ["testing"] }
once_cell = "1.2"
futures-await-test = "0.3"

[features]
cache-nonce = ["lru"]
default = []
