[package]
name = "filecoin-service"
authors = ["Zondax <info@zondax.ch>"]
version = "0.1.0"
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/Zondax/filecoin-signing-tools"
description =""

[dependencies]
log="0.4"
thiserror = "1.0.21"
serde_json = "1.0.58"
filecoin-signer = { path = "../signer" }
forest_message = { default-features = false, features = ["pairing"],version = "0.7"  }
warp = "0.2.5"
jsonrpc-core = "15.1.0"
lazy_static = "1.4.0"
libsecp256k1 = "0.6"
blake2b_simd = "0.5.10"
base64 = "0.13.0"
hex = { git = "https://github.com/Zondax/rust-hex", rev="6e35fb48999278c8c6c75b099baa4ea2a9d1d12b" }

gumdrop = "0.7.0"
[dependencies.abscissa_core]
version = "0.5.2"

[dependencies.serde]
version = "1.0.116"
features = ["serde_derive"]

[dependencies.lru]
optional = true
version = "0.6.0"

[dependencies.tokio]
version = "0.2.22"
features = ["full", "time"]

[dependencies.reqwest]
version = "0.10.8"
features = ["json", "gzip"]

[dev-dependencies]
abscissa_core = { version = "0.5.1", features = ["testing"] }
once_cell = "1.4.1"
futures-await-test = "0.3.0"

[features]
cache-nonce = ["lru"]
default = []
