[dependencies]
filecoin-signer = { features = ["with-ffi-support"], path = "../signer" }
ffi-support = "0.4"

[lib]
crate-type = ["cdylib"]

[package]
authors = ["Zondax <info@zondax.ch>"]
description = "Exports filecoin-signer to several languages"
edition = "2018"
license = "Apache-2.0"
name = "filecoin-signer-ffi"
repository = "https://github.com/Zondax/filecoin-rs"
version = "0.1.0"
