[dependencies]
ffi-support = "0.4"
filecoin-signer = { features = ["with-ffi-support"], path = "../signer" }
hex = { git = "https://github.com/Zondax/rust-hex", rev="6e35fb48999278c8c6c75b099baa4ea2a9d1d12b" }
jni = { optional = true, version = "0.17" }

[features]
with-jni = ["jni"]

[lib]
crate-type = ["cdylib"]

[package]
authors = ["Zondax <info@zondax.ch>"]
description = "Exports filecoin-signer to several languages"
edition = "2018"
license = "Apache-2.0"
name = "filecoin-signer-ffi"
repository = "https://github.com/Zondax/filecoin-signing-tools"
version = "0.1.0"
