[package]
name = "filecoin-signer-wasm"
version = "0.1.0"
authors = ["Zondax <info@zondax.ch>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/Zondax/filecoin-signing-tools"
description = ""

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
tiny-bip39 = "0.8.0"
thiserror = "1.0.20"
serde_json = "1.0.79"
libsecp256k1 = "0.7.0"
hex = { git = "https://github.com/Zondax/rust-hex", rev = "6e35fb48999278c8c6c75b099baa4ea2a9d1d12b" }
base64 = "0.13.0"
js-sys = "0.3.57"
wasm-bindgen-futures = "0.4.15"
serde = { version = "1.0", features = ["derive"] }

libc = "=0.2.118"
const_fn = "=0.4.3"
itoa = "=0.4.6"
parking_lot_core = "=0.8.0"
pin-project = "1.0.11"
pin-project-internal = "1.0.11"
quote = "1.0.15"
smallvec = "=1.6.1"
subtle = "=2.3.0"
syn = "1.0.85"
toml = "=0.5.7"

fvm_shared = "2.0.0"
fvm_ipld_encoding = "0.2.3"

getrandom = { version = "0.1.14", features = ["wasm-bindgen"] }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.1", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.2", optional = true }

# import filecoin_signer
filecoin-signer = { path = "../signer" }

zx-bip44 = "0.1.0"

[dependencies.wasm-bindgen]
version = "0.2.79"
features = ["serde-serialize"]

[dev-dependencies]
wasm-bindgen-test = "0.3.15"

#[package.metadata.wasm-pack.profile.release]
#wasm-opt = false

[build-dependencies]
cc = "=1.0.65"
