[package]
name = "filecoin-signer-wasm"
version = "0.1.0"
authors = ["Zondax <info@zondax.ch>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/Zondax/filecoin-rs"
description =""

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
tiny-bip39 = "0.7"
thiserror = "1.0"
serde_json = "1.0"
libsecp256k1 = "0.3.5"
hex = "0.4"
js-sys = "0.3.37"
wasm-bindgen-futures = "0.4.10"
serde = { version = "1.0", features = ["derive"] }

getrandom = { version = "0.1.14", features = ["wasm-bindgen"]}

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.1", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.2", optional = true }

# import filecoin_signer
filecoin-signer = { path = "../signer" }

# ledger app
filecoin-signer-ledger = { path = "../ledger" }

bip44 = { git = "https://github.com/Zondax/ledger-rs" }

[dependencies.wasm-bindgen]
version = "^0.2"
features = ["serde-serialize"]

[dev-dependencies]
wasm-bindgen-test = "0.2"
