[package]
name = "filecoin-signer"
version = "0.10.1"
authors = ["Zondax <info@zondax.ch>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/Zondax/filecoin-signing-tools"
description =""

[dependencies]
thiserror = "1.0.30"
base64 = "0.13.0"
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.79"
serde_cbor = "0.11.1"
serde_bytes = "0.11.5"
rayon = "1"

bls-signatures = {version = "0.10", default-features = false, features = ["pairing"]}

# Crypto related
hex = { git = "https://github.com/Zondax/rust-hex", rev="6e35fb48999278c8c6c75b099baa4ea2a9d1d12b" }
getrandom="0.1.14"
libsecp256k1 = "0.6"
blake2b_simd = "0.5.10"
hmac = "0.8.1"
zeroize = { version = "=1.1", default-features = false, features = ["zeroize_derive"] }
sha2 = "0.9.2"

# logging
log = "0.4.11"
env_logger = "0.7"

arbitrary = { optional = true, features = ["derive"], version = "1" }
ffi-support = { optional = true, version = "0.4" }


forest_vm = "0.3.1"
forest_address = "0.3.1"
forest_encoding = "0.2.1"
forest_message = { default-features = false, features = ["pairing"], version = "0.7"  }
forest_crypto = { default-features = false, features = ["pairing"], version = "0.5.3"  }

tiny-bip39 = "0.8.0"
num_bigint_chainsafe = { package = "forest_bigint", version = "0.1.2"}

zx-bip44 = "0.1.0"

extras = { path = "../extras"}
fil_actor_init = { git = "https://github.com/rllola/builtin-actors", branch = "fix/actor-feature" }
fil_actor_multisig = { git = "https://github.com/rllola/builtin-actors", branch = "fix/actor-feature" }
fil_actor_paych = { git = "https://github.com/rllola/builtin-actors", branch = "fix/actor-feature" }

fvm_shared = "0.2.0"
clock = { package = "fil_clock", git = "https://github.com/chainsafe/forest", rev="d5a774a10b59dcad5372f520577180b9614fe2bb" }
cid = "0.8.3"

num-traits = "0.2"

[dev-dependencies]
rand_chacha = "0.2.2"
rand = "0.7"

[features]
default = []
with-arbitrary = ["arbitrary"]
with-ffi-support = ["ffi-support"]
