[package]
name = "filecoin-signer"
version = "0.0.0"
authors = ["Zondax <info@zondax.ch>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/Zondax/filecoin-signing-tools"
description =""

[dependencies]
thiserror = "1.0.30"
base64 = "0.13.0"
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.79"
serde_cbor = "0.11.1"
serde_bytes = "0.11.5"
rayon = "1"

bls-signatures = {version = "0.13.0", default-features = false, features = ["pairing"]}

# Crypto related
hex = "0.4.3"
getrandom = "0.1.14"
libsecp256k1 = "0.6"
blake2b_simd = "0.5.10"
hmac = "0.8.1"
zeroize = { version = "^1.1", default-features = false, features = ["zeroize_derive"] }
sha2 = "0.9.2"

# logging
log = "0.4.11"
env_logger = "0.9.0"

arbitrary = { optional = true, features = ["derive"], version = "=1.1.3" }
derive_arbitrary = { version = "=1.1.6"}

ffi-support = { optional = true, version = "0.4" }

tiny-bip39 = "0.8.0"

zx-bip44 = "0.1.0"

extras = { path = "../extras"}
fil_actor_cron = { version = "10.0.0", git = "https://github.com/filecoin-project/builtin-actors", tag = "v10.0.0" }
fil_actor_init = { version = "10.0.0", git = "https://github.com/filecoin-project/builtin-actors", tag = "v10.0.0" }
fil_actor_multisig = { version = "10.0.0", git = "https://github.com/filecoin-project/builtin-actors", tag = "v10.0.0" }
fil_actor_paych = { version = "10.0.0", git = "https://github.com/filecoin-project/builtin-actors", tag = "v10.0.0" }
fil_actor_miner = { version = "10.0.0", git = "https://github.com/filecoin-project/builtin-actors", tag = "v10.0.0" }

fvm_shared = "3.0.0-alpha.20"
fvm_ipld_encoding = "0.3.3"
cid = { version = "0.8.3", default-features = false, features = ["serde-codec"] }


num-traits = "0.2"
regex = "1"
lazy_static = "1.4.0"

[dev-dependencies]
rand_chacha = "0.3.1"
rand = "0.8"

[features]
default = []
with-arbitrary = ["arbitrary"]
with-ffi-support = ["ffi-support"]
